--- a/app/src/main/res/layout/layout_feed.xml
+++ b/app/src/main/res/layout/layout_feed.xml
@@ -81,7 +81,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="13dp"
             android:layout_toEndOf="@+id/iv_user"
-            android:text="Ujjwal  \u2022  2 days ago"
+            android:text="Malhar  \u2022  2 days ago"
             android:textSize="16sp" />
 
         <TextView
